# comic-dl

./: .gitignore  Cargo.toml  Makefile  README.md
src/: main.rs
src/assets/: update.sh
src/sites/: mod.rs  readcomic_me.rs  scanita_org.rs  zerocalcare_net.rs
